--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,17 @@ services:
     ports:
       - "5050:80"
 
+  #https://mailpit.axllent.org/docs/install/docker/
+  smtp:
+    image: axllent/mailpit
+    ports:
+      - 8025:8025
+      - 1025:1025
+    environment:
+      MP_MAX_MESSAGES: 5000
+      MP_SMTP_AUTH_ACCEPT_ANY: 1
+      MP_SMTP_AUTH_ALLOW_INSECURE: 1
+
 volumes:
   pg-data:
     driver: local
